--- a/Assets/Scripts/MainMenu/Marmalade.TheGameOfLife.MainMenu.asmdef
+++ b/Assets/Scripts/MainMenu/Marmalade.TheGameOfLife.MainMenu.asmdef
@@ -1,7 +1,10 @@
 {
-    "name": "Hasbro.TheGameOfLife.Gameplay",
-    "rootNamespace": "",
+    "name": "Marmalade.TheGameOfLife.MainMenu",
+    "rootNamespace": "Marmalade.TheGameOfLife.MainMenu",
     "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:d25e4ea37e726b248af9a75ee46dbeda",
+        "GUID:4365bf90deedd1d49a893629c07b4546",
         "GUID:f5f549b59834f4541899401b58d40ee2"
     ],
     "includePlatforms": [],
