--- a/Assets/Scripts/Game/Marmalade.TheGameOfLife.Gameplay.asmdef
+++ b/Assets/Scripts/Game/Marmalade.TheGameOfLife.Gameplay.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "Hasbro.UiElements",
-    "rootNamespace": "Hasbro.UiElements",
+    "name": "Marmalade.TheGameOfLife.Gameplay",
+    "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:f5f549b59834f4541899401b58d40ee2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
