--- a/Assets/Scripts/MiniGames/TrafficJam/Marmalade.TheGameOfLife.TrafficJam.asmdef
+++ b/Assets/Scripts/MiniGames/TrafficJam/Marmalade.TheGameOfLife.TrafficJam.asmdef
@@ -2,6 +2,7 @@
     "name": "Marmalade.TheGameOfLife.TrafficJam",
     "rootNamespace": "Marmalade.TheGameOfLife.TrafficJam",
     "references": [
+        "GUID:df55f17f78f75a643aff19957150ab7f",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:b5b1c6cd668cdd84da811de4753707b2",
         "GUID:4365bf90deedd1d49a893629c07b4546",
