--- a/Assets/Plugins/Z3/Utils/UnityUI/Z3.UnityUI.asmdef
+++ b/Assets/Plugins/Z3/Utils/UnityUI/Z3.UnityUI.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Marmalade.UiElements",
-    "rootNamespace": "Marmalade.UiElements",
+    "name": "Z3.UnityUI",
+    "rootNamespace": "Z3.UnityUI",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
