--- a/Assets/Scripts/MiniGames/TrafficJam/Marmalade.TheGameOfLife.TrafficJam.asmdef
+++ b/Assets/Scripts/MiniGames/TrafficJam/Marmalade.TheGameOfLife.TrafficJam.asmdef
@@ -10,6 +10,7 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:b5b1c6cd668cdd84da811de4753707b2",
         "GUID:4365bf90deedd1d49a893629c07b4546",
+        "GUID:67dd156a5504d5a488e69afc94c90f94",
         "GUID:f5f549b59834f4541899401b58d40ee2"
     ],
     "includePlatforms": [],
