--- a/Assets/Scripts/Config/Marmalade.TheGameOfLife.Config.asmdef
+++ b/Assets/Scripts/Config/Marmalade.TheGameOfLife.Config.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Marmalade.TheGameOfLife.Data",
-    "rootNamespace": "Marmalade.TheGameOfLife.Data",
+    "name": "Marmalade.TheGameOfLife.Config",
+    "rootNamespace": "Marmalade.TheGameOfLife.Config",
     "references": [
         "Marmalade.TheGameOfLife.TrafficJam",
         "Marmalade.TheGameOfLife.Car",
